fixed manage blog alignments

--- a/application/public/manage.css
+++ b/application/public/manage.css
@@ -6,50 +6,117 @@
 }
 
 main{
-    height: 100%;
+    /* height: 100%; */
+    height: auto;
     width: 100%;
+    display: flex;
+    border: 2px solid red;
     justify-content: center;
     align-content: center;
-}
+    flex-direction: column;
+    gap: 20px;
+}   
 
 .heading {
-    margin: 25px auto;
-    width: 220px;
-    height: 35px;
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .blog-container {
+    margin: 0 auto;
+    border: 2px solid green;
     border-radius: 3px;
-    height: 70px;
-    margin: 25px 100px;
+    /* height: 100px; */
+    /* margin: 25px 100px; */
     padding: 7px 0;
     background-color: blue;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    max-width: 800px;
+    /* gap: 20px; */
 }
 
 .blog-image {
     border-radius: 3px;
-    display: inline-block;
-    height: 55px;
+    /* height: 55px; */
+    height: 100%;
     width: 405px;
     margin: 0 10px;
     background-color: red;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    /* flex: 2; */
+    gap: 10px;
 }
 
 .actions {
+    /* flex: 1; */
     border-radius: 3px;
-    display: inline-block;
+    /* display: inline-block; */
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     height: 55px;
     width: 205px;
     margin: 0 10px;
     background-color: brown;
+    /* margin-top: 150px; */
+}
+.actions button{
+    height: 50px;
+    width: 50px;
+    margin: 0 10px;
 }
 
+.info{
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    margin: 10px;
+}
+.info h3{
+    margin: 5px;
+}
 .image {
     border-radius: 3px;
     display: inline-block;
-    height: 55px;
-    width: 55px;
+    height: 60px;
+    width: 60px;
     background-color: yellow;
+    margin: 10px;
+}
+/* i{
+    height: 50px;
+    width: 50px;
+} */
+
+
+/* media query */
+
+@media (max-width:660px){
+    .blog-container{
+        flex-direction: column;
+        gap: 10px;
+        max-width: 600px;
+        width: fit-content;
+    }
+    .actions{
+        justify-content: center;
+        margin: 0;
+    }
+    .blog-image{
+        width: 100%;
+    }
+    .actions button{
+        flex: 1;
+        margin: 15px 5px;
+    }
 }
